# megabyte-env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml
baseline/: easy_task.py  hard_task.py  medium_task.py
server/: __init__.py  app.py  megabyte_environment.py  requirements.txt  utils.py
server/deps_data/: aiohttp_deps.json  keyring_deps.json  openenv-core_deps.json  pytest-cov_deps.json  seaborn_deps.json  torchvision_deps.json  trl_deps.json
tasks/: __init__.py  easy_task.py  hard_task.py  medium_task.py
