[project]
name = "megabyte-env"
version = "0.1.0"
description = "Megabyte OpenEnv dependency repair environment"
requires-python = ">=3.10"

authors = [
  { name = "Bhavika Bandu" },
  { name = "B M Manohara" }
]

dependencies = [
  "openenv-core>=0.2.0",
  "fastapi==0.135.3",
  "uvicorn==0.43.0",
  "packaging==26.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env = "megabyte"
entrypoint = "server.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"